# wrf-gc-release

./: .gitignore  Makefile  README.md  chem_driver.F  chemics_init.F  gigc_convert_state_mod.F  mixactivate_driver.F  module_aer_opt_out.F  module_aerosols_soa_vbs.F  module_aerosols_sorgam.F  module_chem_share.cpy  module_chem_utilities.F  module_convection_prep.F  module_data_gigc_asect.F  module_data_gocart_dust.cpy  module_data_mosaic_asect.F  module_data_radm2.F  module_data_sorgam.F  module_diag_aero_size_info.F  module_gocart_aerosols.F  module_input_chem_bioemiss.F  module_input_chem_data.F  module_input_tracer.F  module_mixactivate_wrappers.F  module_mosaic_driver.F  module_optical_averaging.F  module_tropopause.F  module_upper_bc_driver.F  newUserRegistration.sh  optical_driver.F  registry.chem  release_header.f90  wrfgc_convert_state_mod.F  wrfgc_history_mod.F  wrfgc_io_pnetcdf.F
config/: HEMCO_Config.rc  HEMCO_Diagn.rc  HISTORY.rc  clim_p_trop.nc  input.geos
config/couplers/: wrfgc_convert_state_mod.F.ch4  wrfgc_convert_state_mod.F.co2  wrfgc_convert_state_mod.F.fullchem
config/fullchem/: HISTORY.rc  geoschem_config.yml
gc/: Makefile  Makefile_header.mk
gc/GCHP/: .gitignore  GIGC.mk  Makefile  gc_stateful_mod.F90  gchp_utils.F90  gigc_chunk_mod.F90
gc/GCHP/FVdycoreCubed_GridComp/: Makefile
gc/GCHP/Shared/: GNUmakefile
gc/GTMM/: CMakeLists.txt
gc/GeosCore/: Makefile  drydep_mod.F90  flexchem_mod.F90  hcoi_gc_main_mod.F90  mixing_mod.F90  ucx_mod.F90  vdiff_mod.F90
gc/HEMCO/: .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  SUPPORT.md
gc/HEMCO/.ci-pipelines/: build-matrix.yml  quick-build.yml  release.dockerfile  release.yml
gc/HEMCO/CMakeScripts/: HCO-Helpers.cmake
gc/HEMCO/docs/: .gitignore  requirements.txt
gc/HEMCO/docs/source/: bibtex.json  conf.py  index.rst
gc/HEMCO/docs/source/coupling/: intro.rst
gc/HEMCO/docs/source/getting-started/: key-references.rst  quick-start.rst  requirements.rst
gc/HEMCO/docs/source/hco-ref-guide/: basic-examples.rst  diagnostics.rst  extensions.rst  hco.bib  hemco-config.rst  input-file-format.rst  intro.rst  key-references.rst  known-bugs.rst  more-examples.rst  under-the-hood.rst  units.rst  version-history.rst
gc/HEMCO/docs/source/hco-sa-guide/: compiling.rst  config-sim.rst  create-rundir.rst  download-code.rst  download-data.rst  hardware.rst  intro.rst  login-env.rst  run-standalone.rst  software.rst
gc/HEMCO/docs/source/user-guide/: compiling.rst  downloading.rst  rundir-config.rst  rundir-init.rst  running.rst
gc/HEMCO/run/: HEMCO_Config.rc.sample  HEMCO_Diagn.rc.sample  HEMCO_sa_Config.template  HEMCO_sa_Grid.025x03125.rc  HEMCO_sa_Grid.05x0625.rc  HEMCO_sa_Grid.2x25.rc  HEMCO_sa_Spec.rc  HEMCO_sa_Time.rc  README  createRunDir.sh
gc/HEMCO/src/Core/: CMakeLists.txt  Makefile  TestNcdfUtil.F90  hco_arr_mod.F90  hco_calc_mod.F90  hco_charpak_mod.F90  hco_chartools_mod.F90  hco_clock_mod.F90  hco_config_mod.F90  hco_datacont_mod.F90  hco_diagn_mod.F90  hco_driver_mod.F90  hco_emislist_mod.F90  hco_error_mod.F90  hco_extlist_mod.F90  hco_filedata_mod.F90  hco_fluxarr_mod.F90  hco_geotools_mod.F90  hco_henry_mod.F90  hco_inquireMod.F90  hco_interp_mod.F90  hco_julday_mod.F90  hco_logfile_mod.F90  hco_m_netcdf_io_checks.F90  hco_m_netcdf_io_close.F90  hco_m_netcdf_io_create.F90  hco_m_netcdf_io_define.F90  hco_m_netcdf_io_get_dimlen.F90  hco_m_netcdf_io_handle_err.F90  hco_m_netcdf_io_open.F90  hco_m_netcdf_io_read.F90  hco_m_netcdf_io_readattr.F90  hco_m_netcdf_io_write.F90  hco_ncdf_mod.F90  hco_precision_mod.F90  hco_readlist_mod.F90  hco_regrid_a2a_mod.F90  hco_restart_mod.F90  hco_scale_mod.F90  hco_state_mod.F90  (+15 more)
gc/HEMCO/src/Extensions/: CMakeLists.txt  Makefile  drydep_toolbox_mod.F90  hcox_custom_mod.F90  hcox_driver_mod.F90  hcox_dustdead_mod.F  hcox_dustginoux_mod.F90  hcox_finn_include.FINNv16  hcox_finn_include.H  hcox_finn_mod.F90  hcox_finn_mod.FINNv16  hcox_gc_POPs_mod.F90  hcox_gc_RnPbBe_mod.F90  hcox_gfed_include_gfed3.H  hcox_gfed_include_gfed4.H  hcox_gfed_mod.F90  hcox_iodine_mod.F90  hcox_lightnox_mod.F90  hcox_megan_mod.F90  hcox_paranox_mod.F90  hcox_seaflux_mod.F90  hcox_seasalt_mod.F90  hcox_soilnox_mod.F90  hcox_state_mod.F90  hcox_template_mod.F90x  hcox_tomas_dustdead_mod.F  hcox_tomas_jeagle_mod.F90  hcox_tools_mod.F90  hcox_volcano_mod.F90  ocean_toolbox_mod.F90
gc/HEMCO/src/Extensions/Preprocess/: Makefile  finn.pl  gfed.pl
gc/HEMCO/src/Interfaces/: .gitignore  CMakeLists.txt  Makefile  hco_interface_common.F90
gc/HEMCO/src/Interfaces/GEOS/: CMakeLists.txt  HEMCO_GridComp.rc  HEMCO_GridCompMod.F90  HEMCO_Registry.rc  HEMCOgmi_Config.rc  HEMCOgmi_Diagn.rc  HEMCOgmi_ExtData.rc  HEMCOgmi_Spec.rc  HEMCOgocart_Config.rc  HEMCOgocart_Diagn.rc  HEMCOgocart_ExtData.rc  HEMCOgocart_Spec.rc  README
gc/HEMCO/src/Interfaces/MAPL_ESMF/: CMakeLists.txt  hcoi_esmf_mod.F90
gc/HEMCO/src/Interfaces/Shared/: CMakeLists.txt  hco_interface_common.F90
gc/HEMCO/src/Interfaces/Standalone/: CMakeLists.txt  hcoi_standalone_mod.F90  hemco_standalone.F90
gc/HEMCO/src/Shared/: TestNcdfUtil.F90  hco_charpak_mod.F90  hco_henry_mod.F90  hco_inquireMod.F90  hco_julday_mod.F90  hco_m_netcdf_io_checks.F90  hco_m_netcdf_io_close.F90  hco_m_netcdf_io_create.F90  hco_m_netcdf_io_define.F90  hco_m_netcdf_io_get_dimlen.F90  hco_m_netcdf_io_handle_err.F90  hco_m_netcdf_io_open.F90  hco_m_netcdf_io_read.F90  hco_m_netcdf_io_readattr.F90  hco_m_netcdf_io_write.F90  hco_ncdf_mod.F90  hco_precision_mod.F90  hco_regrid_a2a_mod.F90
gc/HEMCO/src/Shared/perl/: ncCodeDef  ncCodeRead  ncCodeWrite
gc/Headers/: Makefile  input_opt_mod.F90  state_diag_mod.F90
gc/Interfaces/GCHP/: Makefile
gc/KPP/: Makefile
gc/KPP/fullchem/: Makefile  carbon_Funcs.F90
gc/NcdfUtil/: Makefile
gigc/: .gitignore
gigc/GCHP/: .gitignore  GIGC.mk  Makefile  gchp_utils.F90  gigc_chunk_mod.F90  gigc_mpi_wrap.F90  gigc_stateful_mod.F90
gigc/GCHP/ESMF/: makefile
gigc/GeosCore/: drydep_mod.F  tomas_mod.F
gigc/HEMCO/Core/: hcoio_read_std_mod.F90  interpreter.F90
